Bug 1003730 - Always terminate workers when in canceling state, r=mrbkap